# MeshToLabelMap

./: CMakeLists.txt  License.txt  MeshToLabelMap.cxx  MeshToLabelMap.xml  README.md  main.cxx  vtkAttributedPolyDataToImage.cxx  vtkAttributedPolyDataToImage.h  vtkPolyDataToImageStencilOBBTree.cxx  vtkPolyDataToImageStencilOBBTree.h
MeshToLabelMapPipeline/: CMakeLists.txt  MeshToLabelMapPipeline.py
Testing/: CMakeLists.txt  MeshToLabelMapTest.cxx
Testing/Data/Baseline/: MeshToLabelMap-BaselineLabelMapWithBB.nrrd.sha256  MeshToLabelMap-BaselineLabelMapWithBBExt101520.nrrd.sha256  MeshToLabelMap-BaselineLabelMapWithBBMedianFilter.nrrd.sha256  MeshToLabelMap-BaselineLabelMapWithReference.nrrd.sha256  baselineLabelMapWithBB.nrrd.md5  baselineLabelMapWithBBExt101520.nrrd.md5  baselineLabelMapWithBBMedianFilter.nrrd.md5  baselineLabelMapWithReference.nrrd.md5
Testing/Data/Input/: MeshToLabelMap-Model.vtk.sha256  MeshToLabelMap-Reference.nrrd.sha256  model.vtk.md5  reference.nrrd.md5
